# mafuyu

./: .editorconfig  .env.example  .env.hosts.example  .gitattributes  .gitignore  .prettierrc.json  COMMIT_NAMING.md  Caddyfile  Cargo.toml  Dockerfile.rust.libs  README.md  Taskfile.yml  bun.lockb  docker-compose.dev.yml  docker-compose.yml  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/auth/: Cargo.toml
apps/auth/src/: main.rs  service.rs
apps/auth/src/oauth2/: core.rs  github.rs  mod.rs
apps/auth/src/repository/: credentials.rs  mod.rs  token.rs  tokens.rs
apps/auth/src/service/: service.rs
apps/auth/src/utils/: hasher.rs  jwt.rs  mod.rs  redis_ops.rs  validator.rs
apps/authorization/: Cargo.toml
apps/authorization/src/: main.rs  service.rs
apps/cdn/: Cargo.toml
apps/cdn-node/: Cargo.toml
apps/cdn-node/src/: api.rs  fs.rs  main.rs  nats.rs  router.rs
apps/cdn-node/src/internal/: fs.rs  image.rs  mod.rs
apps/cdn/src/: db.rs  main.rs  repo.rs  service.rs
apps/gateway/: Cargo.toml
apps/gateway/src/: main.rs  service.rs
apps/gateway/src/interceptors/: mod.rs  remove_keep_alive.rs
apps/gateway/src/middleware/: header_tools.rs  middleware_func.rs  mod.rs  set_tokens_cookies.rs  tools.rs
apps/gateway/src/service/: service.rs
apps/integrations/: Cargo.toml  Dockerfile
apps/integrations/src/: main.rs  service.rs
apps/integrations/src/provider/: github.rs  google.rs  mod.rs
apps/mailer/: go.mod  go.sum  main.go
apps/mailer-async/: go.mod  go.sum  main.go
apps/mailer-async/internal/: router.go
apps/mailer-async/internal/service/: gmail.go
apps/mailer/service/: grpc_impl.go
apps/mailer/templates/: templates.go
apps/oauth2/: Cargo.toml
apps/oauth2/src/: handler.rs  main.rs  service.rs
apps/oauth2/src/oauth2/: core.rs  github.rs  google.rs  mod.rs
apps/passport/: Cargo.toml  Dockerfile
apps/passport/src/: main.rs  repo.rs  service.rs
apps/tokens/: Cargo.toml  readme.md
apps/tokens-async/: Cargo.toml
apps/tokens-async/src/: main.rs  repo.rs  router.rs
apps/tokens/src/: jwt.rs  main.rs  repo.rs  service.rs
apps/tokens/src/internal/: jwt.rs  mod.rs  repo.rs  tools.rs
apps/tokens/src/internal/router/: core.rs  jetstream.rs  mod.rs
apps/user/: Cargo.toml
apps/user/src/: main.rs  service.rs
apps/user/src/repo/: blocked_users.rs  followers_friends.rs  languages.rs  mod.rs  user.rs
apps/user/src/tools/: image.rs  mod.rs  request.rs
cli/: Cargo.toml
cli/src/: dev.rs  grpc.rs  init.rs  main.rs
cli/src/internal/: animated.rs  cmd.rs  executable.rs  mod.rs  os_vars.rs
config/: nats-server.conf
docs/: scheme.drawio  scheme.html
frontend/mugen/: components.json  ideas.md  package.json  tailwind.config.js  tsconfig.json
frontend/mugen/app/: layout.tsx  page.tsx  providers.tsx
frontend/mugen/app/(root)/: layout.tsx  page.tsx
frontend/mugen/components/: icons.tsx  theme-switch.tsx
frontend/mugen/components/@layout/: ChatLayout.tsx  Voice2Layout.tsx  VoiceLayout.tsx
frontend/mugen/components/aside/: MainLayoutManagementMenu.tsx  OverlaysManagementMenu.tsx  UserShort.tsx
frontend/mugen/components/chat/: ChatInformation.tsx  ChatInput.tsx  ChatLayout.tsx  ChatList.tsx  Message.tsx
frontend/mugen/components/global/: AppShell.tsx  Navbar.tsx  Sidebar.tsx
frontend/mugen/components/icons/: ChatAppendix.tsx  Check.tsx  ChevronUp.tsx  File.tsx  Messages.tsx  Microphone.tsx  MicrophoneOff.tsx  Paperclip.tsx  Pencil.tsx  Photo.tsx  Pin.tsx  Plus.tsx  Search.tsx  Send.tsx  Settings.tsx  Sticker.tsx  Terminal.tsx  Trash.tsx  Volume.tsx  X.tsx
frontend/mugen/components/input/: index.tsx
frontend/mugen/components/reusable/: ButtonTooltiped.tsx  CardPreseted.tsx  ExpandableButtonGroup.tsx  LinkSmooth.tsx  ModalRemove.tsx
frontend/mugen/config/: fonts.ts  site.ts
frontend/mugen/lib/: const.ts
frontend/mugen/lib/dto/: global.ts
frontend/mugen/lib/store/: global.ts
frontend/mugen/styles/: globals.css
frontend/mugen/types/: index.ts
frontend/passport/: .prettierrc  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/passport/src/: app.d.ts  app.html  app.postcss  hooks.server.ts
frontend/shisou/: .gitignore  nuxt.config.ts  package.json
frontend/shisou/src/: app.vue
libs/config/: go.mod
libs/config/go/: config.go  const.go  hosts.go
libs/config/src/: constants.rs  db.rs  hosts.rs  secrets.rs
libs/db/: Cargo.toml  go.mod  go.sum  main.go
libs/db/go/: db.go
libs/db/models/: user.go
libs/db/models/custom_dt/: auth_provider.go  enums.go  user_role.go
libs/db/src/: lib.rs  repo.rs
libs/db/src/go/: db.go
libs/db/src/models/: language.go  languages.rs  mod.rs  post.go  posts.rs  prelude.rs  user.go  user_blocked.rs  user_credentials.rs  user_followers.rs  user_friends.rs  user_hidden_posts.rs  user_integrations.rs  user_languages.rs  user_liked_comments.rs  user_liked_posts.rs  users.rs
libs/db/src/models/custom_dt/: enums.go
libs/db/src/rust/: lib.rs  repo.rs
libs/db/src/rust/models/: comments.rs  mod.rs  post_reports.rs  prelude.rs  user_credentials.rs  user_followers.rs  user_informations.rs  user_languages.rs  user_tokens.rs  users.rs
libs/grpc/: Cargo.toml  go.mod  go.sum  lib.go  package.json  tsconfig.json
libs/grpc/lib/: const.ts  grpc-client.ts  grpcweb-client.ts  twirp-client.ts
libs/grpc/protos/: api.proto
libs/grpc/src/: errors.rs  lib.rs  main.rs  metadata.rs
libs/log/: go.mod
libs/log/src/: logger.go
libs/logger/: Cargo.toml  go.mod  go.sum  logger.go
libs/logger/src/: lib.rs  tower.rs
libs/nats/: Cargo.toml  go.mod  go.sum
libs/nats/pkg/: tools.go
libs/nats/src/: app.rs  errors.rs  impls.rs  lib.rs  message.rs  route.rs  tools.rs
libs/sentry/: Cargo.toml  go.mod  go.sum  sentry.go
libs/sentry/src/: lib.rs  tower.rs
libs/utils/: Cargo.toml
libs/utils/src/: errors.rs  errors_impl.rs  lib.rs
libs/utils/src/errors/: impls.rs  mod.rs  nats.rs  repo.rs  tonic.rs  traits.rs
libs/utils/src/image/: core.rs  mod.rs
templates/: mailer.send_confirmation_email.html
(+260 files in other folders)
