[workspace]
members = [
  "apps/gateway",
  "apps/auth",
  "apps/authorization",
  "apps/tokens-async",
  "apps/tokens",
  "apps/oauth2",
  "apps/integrations",
  "apps/passport",
  "apps/user",
  "apps/cdn",
  "apps/cdn-node",

  "libs/config",
  "libs/db",
  "libs/grpc",
  "libs/nats",
  "libs/logger",
  "libs/utils",

  "cli"
]

resolver = "2"
