[package]
edition = "2021"
name = "cli"
version = "0.1.0"

[dependencies]
clap = {version = "4.5.0", features = ["derive"]}
logger = {path = "../libs/logger"}
makoto_config = {path = "../libs/config"}
tokio = {version = "1.35.0", features = ["time", "macros", "rt-multi-thread", "process", "io-util", "fs"]}
yomi = {version = "0.1.2"}
