[package]
name = "cdn_node"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.33.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
uuid = { version = "1.6.1", features = ["v4"] }

axum = { version = "0.7.4" }
ril = { version = "0.10.1" , features = ["webp", "gif"]}
tower = "0.4.13"

makoto_lib = {path = "../../libs/utils"}
makoto_config = {path = "../../libs/config"}
logger = {path = "../../libs/logger", features = ["tower"]}
mafuyu_nats = {path = "../../libs/nats"}
mafuyu_sentry = {path = "../../libs/sentry", features = ["tower"]}
