[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.7"
image = "0.24.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.77"
async-nats = "0.33.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
tonic = "0.10.2"
prost = "0.12.3"
redb = "1.5.0"

makoto_lib = {path = "../../libs/utils"}
makoto_config = {path = "../../libs/config"}
makoto_logger = {path = "../../libs/log"}
mafuyu_nats = {path = "../../libs/nats"}
makoto_grpc = {path = "../../libs/grpc"}