[package]
name = "oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
oauth2 = "4.4.2"
actix-web = "4"
actix-cors="0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.77"
reqwest = {version = "0.11.23", features = ["json"]}

makoto_lib = {path = "../../libs/utils"}
makoto_config = {path = "../../libs/config"}
makoto_logger = {path = "../../libs/log"}
http = "0.2.11"