[package]
name = "oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
oauth2 = "4.4.2"
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.23"

makoto_grpc = {path = "../../libs/grpc"}
mafuyu_lib = {path = "../../libs/utils", features = ["rpc"]}
makoto_config = {path = "../../libs/config"}
logger = {path = "../../libs/logger"}
mafuyu_sentry = {path = "../../libs/sentry"}