[package]
name = "tokens_async"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.28", default-features = false, features = ["std"] }
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
jwt = "0.16.0"
async-nats = {version = "0.33.0", features = ["service"]}
reqwest = {version = "0.11.23", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.33"
sea-orm = { version = "0.12.9", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-time", "macros" ] }
hmac = "0.12.1"
sha2 = "0.10.8"
uuid = { version = "1.6.1", features = ["v4"] }

makoto_grpc = {path = "../../libs/grpc"}
mafuyu_lib = {path = "../../libs/utils", features = ["db"]}
makoto_config = {path = "../../libs/config"}
logger = {path = "../../libs/logger"}
makoto_db = {path = "../../libs/db"}
mafuyu_nats = {path = "../../libs/nats"}
