[package]
name = "tokens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", default-features = false, features = ["std"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
jwt = "0.16.0"
async-nats = {version = "0.33.0", features = ["service"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.33"
sea-orm = { version = "0.12.9", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-time", "macros" ] }
hmac = "0.12.1"
sha2 = "0.10.8"

makoto_lib = {path = "../../libs/utils"}
makoto_config = {path = "../../libs/config"}
makoto_logger = {path = "../../libs/log"}
makoto_db = {path = "../../libs/db"}
uuid = { version = "1.6.1", features = ["v4"] }