[package]
name = "tokens"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
jwt = "0.16.0"
chrono = "0.4.33"
hmac = "0.12.1"
sea-orm = { version = "0.12.9", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-time", "macros" ] }
sha2 = "0.10.8"
uuid = { version = "1.6.1", features = ["v4"] }
async-nats = {version = "0.33.0", features = ["service"]}

makoto_db = {path = "../../libs/db"}
makoto_grpc = {path = "../../libs/grpc"}
makoto_lib = {path = "../../libs/utils"}
makoto_config = {path = "../../libs/config"}
logger = {path = "../../libs/logger"}
mafuyu_nats = {path = "../../libs/nats"}
