[package]
name = "makoto_db"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12.9", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-time", "macros"] }
phf = { version = "0.11.2", features = ["macros"] }
makoto_config = { path = "../config" }
makoto_lib = {path = "../utils"}
