[package]
name = "makoto_lib"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0" }
serde_json = "1.0"
sea-orm = { version = "0.12.9", features = ["runtime-tokio-rustls", "macros" ] }
tonic = "0.10.2"
reqwest = {version = "0.11.23"}
async-nats = {version = "0.33.0"}
mafuyu_nats = { path = "../nats"}