[package]
name = "mafuyu_lib"
version = "0.1.0"
edition = "2021"


[dependencies]
base64 = { version = "0.22.0", optional = true }

sea-orm = { version = "0.12.9", default-features = false, optional = true }

tonic = { version = "0.10.2", default-features = false, optional = true }

async-nats = {version = "0.33.0", optional = true}
mafuyu_nats = { path = "../nats", optional = true}

[features]
default = []
image = ["dep:base64"]
nats = ["dep:async-nats", "dep:mafuyu_nats"] # For client. For server use `libs/nats`.
db = ["dep:sea-orm"]
rpc = ["dep:tonic"]